crates/swc_ecma_parser/tests/typescript-errors/esDecorators/classDeclaration/esDecorators-classDeclaration-exportModifier/file3.ts
// @filename: file3.js

// error
export @dec default class C3 {}
